fix: remove deprecated ZGenerational argument